--- a/public/style.css
+++ b/public/style.css
@@ -16,7 +16,8 @@ h2 {
 }
 
 input[type="text"],
-input[type="password"] {
+input[type="password"] 
+input[type="email"]{
   
   margin-bottom: 10px;
   padding: 10px;
