--- a/public/list.css
+++ b/public/list.css
@@ -1,33 +1,36 @@
-
+body{
+	background-color: blue;
+  background-image: linear-gradient(to bottom right, blue, white);
+}
 .container {
-
 	width: 300px;
 	margin: 0 auto;
 	padding: 20px;
 	border: 1px solid #ccc;
 	border-radius: 5px;
-  }
+}
 
-  h2 {
+h2 {
 	text-align: center;
-  }
+}
 
-  label {
+label {
 	display: block;
 	margin-bottom: 10px;
-  }
-  input[type="text"],
-  input[type="number"],
-  input[type="hidden"] {
+}
+
+input[type="text"],
+input[type="number"],
+input[type="hidden"] {
 	width: 90%;
 	padding: 10px;
 	margin-bottom: 20px;
 	border: 1px solid #ccc;
 	border-radius: 5px;
-  }
+}
 
-  input[type="submit"] {
-
+input[type="submit"] {
+	top: 10px;
 	width: 100%;
 	padding: 10px;
 	background-color: #4c8baf;
@@ -35,21 +38,4 @@
 	border: none;
 	border-radius: 5px;
 	cursor: pointer;
-  }
-  button{
-	width: 100%;
-	padding: 10px;
-	background-color: #4c8baf;
-	color: white;
-	border: none;
-	border-radius: 5px;
-	cursor: pointer;
-  }
-
-
-/*
- table tr td{
-    margin: 10px;
-    padding: 10px;
-    text-align: center;
-} */
+}
