--- a/public/update.ejs
+++ b/public/update.ejs
@@ -7,6 +7,10 @@
 	<title>Update Page</title>
 
 	<style>
+		body{
+			background: linear-gradient(to left, #8367c7, #7edfc2);
+			
+		}
 
 		.container {
 			width: 300px;
@@ -35,7 +39,7 @@
 			top: 10px;
 			width: 100%;
 			padding: 10px;
-			background-color: #4c8baf;
+			background-color: #564caf;
 			color: white;
 			border: none;
 			border-radius: 5px;
