--- a/public/list.css
+++ b/public/list.css
@@ -1,41 +1,100 @@
-body{
-	background-color: blue;
-  background-image: linear-gradient(to bottom right, blue, white);
-}
-.container {
-	width: 300px;
-	margin: 0 auto;
-	padding: 20px;
-	border: 1px solid #ccc;
-	border-radius: 5px;
-}
-
-h2 {
+h1 {
+	font-size: 30px;
+	color: #fff;
+	text-transform: uppercase;
+	font-weight: 300;
 	text-align: center;
+	margin-bottom: 15px;
 }
 
-label {
-	display: block;
-	margin-bottom: 10px;
-}
-
-input[type="text"],
-input[type="number"],
-input[type="hidden"] {
-	width: 90%;
-	padding: 10px;
-	margin-bottom: 20px;
-	border: 1px solid #ccc;
-	border-radius: 5px;
-}
-
-input[type="submit"] {
-	top: 10px;
+table {
 	width: 100%;
-	padding: 10px;
-	background-color: #4c8baf;
-	color: white;
+	table-layout: fixed;
+}
+
+.tbl-header {
+	background-color: rgba(255, 255, 255, 0.3);
+}
+
+.tbl-content {
+	height: 400px;
+	overflow-x: auto;
+	margin-top: 0px;
+	border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+th {
+	padding: 20px 15px;
+	text-align: left;
+	font-weight: 500;
+	font-size: 14px;
+	color: #fff;
+	text-transform: uppercase;
+}
+
+td {
+	padding: 15px;
+	text-align: left;
+	vertical-align: middle;
+	font-weight: 300;
+	font-size: 14px;
+	color: #fff;
+	border-bottom: solid 1px rgba(255, 255, 255, 0.1);
+}
+
+
+body {
+	background: -webkit-linear-gradient(left, #8367c7, #7edfca);
+	background: linear-gradient(to right, #8367c7, #7edfc2);
+	font-family: 'Roboto', sans-serif;
+}
+
+section {
+	margin: 50px;
+}
+
+
+
+::-webkit-scrollbar {
+	width: 6px;
+}
+
+::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb {
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+
+
+.button {
+	color: #fff;
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	padding: 10px 20px;
+	background-color: #ac91f3;
+
+	color: #fff;
 	border: none;
-	border-radius: 5px;
 	cursor: pointer;
+
+}
+
+.update {
+	background-color: #46b46d;
+	margin: 10px;
+	padding: 5px;
+	width: 100px;
+	color: white;
+}
+
+.delete {
+	background-color: #af3131;
+	margin: 10px;
+	width: 100px;
+	padding: 5px;
+	color: white;
 }
